// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MemoryDelayStore > peek > should return empty array when no entries are ready 1`] = `[]`;

exports[`MemoryDelayStore > peek > should return entries sorted by deliverAt 1`] = `
[
  "a",
  "b",
  "c",
]
`;

exports[`MemoryDelayStore > peek > should return entries with deliverAt <= now WITHOUT removing them 1`] = `
[
  "a",
  "b",
]
`;
